--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@tiptap/extension-collaboration": "^2.0.0-beta.33",
     "@tiptap/react": "^2.0.0-beta.105",
     "@tiptap/starter-kit": "^2.0.0-beta.171",
+    "axios": "^0.25.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
