--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "knex": "^1.0.1",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "yjs": "^13.5.24"
   }
 }
