--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@tiptap/react": "^2.0.0-beta.105",
     "@tiptap/starter-kit": "^2.0.0-beta.171",
     "axios": "^0.25.0",
+    "lodash.debounce": "^4.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "5.3",
