--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@tiptap/extension-collaboration": "^2.0.0-beta.33",
+    "@tiptap/extension-placeholder": "^2.0.0-beta.46",
     "@tiptap/react": "^2.0.0-beta.105",
     "@tiptap/starter-kit": "^2.0.0-beta.171",
     "axios": "^0.25.0",
