--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,10 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@tiptap/extension-collaboration": "^2.0.0-beta.33",
+    "@tiptap/extension-color": "^2.0.0-beta.9",
+    "@tiptap/extension-highlight": "^2.0.0-beta.33",
     "@tiptap/extension-placeholder": "^2.0.0-beta.46",
+    "@tiptap/extension-text-style": "^2.0.0-beta.23",
     "@tiptap/react": "^2.0.0-beta.105",
     "@tiptap/starter-kit": "^2.0.0-beta.171",
     "axios": "^0.25.0",
