--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "lodash.debounce": "^4.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-resize-detector": "^7.0.0",
     "react-router-dom": "5.3",
     "react-scripts": "5.0.0",
     "sass": "^1.49.0",
