--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.3",
     "y-webrtc": "^10.2.2",
+    "y-websocket": "^1.3.18",
     "yjs": "^13.5.24"
   },
   "scripts": {
